samples/wig/should_pass/fix_span.wig
fixedStep chrom=chr1 start=0 step=3 span=2
7.1
8.2
9.3
