samples/wig/should_fail/null_step.wig
fixedStep chrom=chr1 start=0 step=0
1
2
3
